# Gym-Management-System-Enterprise

./: .env.example  README.md  Run Gym ERP.bat  alembic.ini  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py
app/core/: __init__.py  constants.py  di.py  errors.py  events.py  pagination.py  result.py
app/core/base/: __init__.py  dto.py  repository.py  service.py  unit_of_work.py  validator.py
app/database/: __init__.py  base.py  engine.py  repository.py  schema.py  unit_of_work.py
app/database/migrations/: env.py
app/infrastructure/: __init__.py  bootstrap.py
app/localization/: __init__.py  localization_service.py
app/localization/catalogs/: ar.json  en.json
app/logs/: __init__.py  logging_service.py
app/modules/: __init__.py
app/modules/attendance/: __init__.py  dtos.py  events.py  repositories.py  setup.py
app/modules/audit/: __init__.py  dtos.py  setup.py
app/modules/employees/: __init__.py  dtos.py  events.py  repositories.py  setup.py  validators.py
app/modules/expenses/: __init__.py  dtos.py  events.py  repositories.py  setup.py  validators.py
app/modules/inventory/: __init__.py  dtos.py  events.py  repositories.py  seed.py  setup.py  validators.py
app/modules/members/: __init__.py  dtos.py  events.py  repositories.py  setup.py  validators.py
app/modules/membership/: __init__.py  dtos.py  events.py  repositories.py  seed.py  setup.py  validators.py
app/modules/notifications/: __init__.py  dtos.py  setup.py
app/modules/payments/: __init__.py  dtos.py  repositories.py  setup.py
app/modules/reports/: __init__.py  setup.py
app/modules/security/: __init__.py  dtos.py  events.py  permissions.py  repositories.py  seed.py  setup.py  validators.py
app/modules/settings/: __init__.py  repositories.py  setup.py
app/modules/trainers/: __init__.py  dtos.py  setup.py  (+3 more)
app/security/: __init__.py  encryption.py  password_hasher.py
app/services/: __init__.py  backup_service.py  qr_code_service.py
app/settings/: __init__.py  config.py  paths.py
app/themes/: __init__.py  theme_manager.py
app/widgets/: __init__.py  main_window.py  navigation.py  resources.py
docs/: ARCHITECTURE.md
scripts/: build.py  create_shortcut.ps1  generate_icon.py  run.bat  run.ps1
tests/: conftest.py
tests/integration/: test_backup_service.py  test_bootstrap.py  test_repository.py  test_unit_of_work.py
tests/support/: sample_models.py
tests/unit/: test_di.py  test_errors.py  test_events.py  test_localization.py  test_member_validators.py  test_membership_validators.py  test_pagination.py  test_qr_code_service.py  test_result.py  test_security.py  test_security_validators.py  test_validators.py
(+103 files in other folders)
